--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "payrexx-sdk",
-  "description": "Payrexx SDK for NodeJS",
+  "name": "zahls-sdk",
+  "description": "zahls.ch SDK for NodeJS",
   "license": "MIT",
-  "author": {
-    "email": "info@3ap.ch",
-    "name": "3AP"
-  },
+  "author": "siebenberge gmbh <info@siebenberge.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/3AP-AG/payrexx-sdk"
+    "url": "git+https://github.com/siebenberge/zahls-sdk.git"
   },
   "keywords": [
-    "PAYREXX",
+    "zahls.ch",
+    "zahls",
     "SDK",
     "API"
   ],
@@ -20,13 +18,13 @@
   },
   "version": "0.3.7",
   "type": "module",
-  "main": "./dist/payrexx-sdk.umd.cjs",
-  "module": "./dist/payrexx-sdk.js",
+  "main": "./dist/zahls-sdk.umd.cjs",
+  "module": "./dist/zahls-sdk.js",
   "types": "./dist/lib/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/payrexx-sdk.js",
-      "require": "./dist/payrexx-sdk.umd.cjs"
+      "import": "./dist/zahls-sdk.js",
+      "require": "./dist/zahls-sdk.umd.cjs"
     }
   },
   "files": [
@@ -57,5 +55,14 @@
   "dependencies": {
     "crypto-js": "^4.1.1",
     "qs": "^6.11.2"
+  },
+  "bugs": {
+    "url": "https://github.com/siebenberge/zahls-sdk/issues"
+  },
+  "homepage": "https://github.com/siebenberge/zahls-sdk#readme",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
   }
 }
+
